<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        tools:context=".AgentCash">

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="11dp"
            android:text="@string/become_an_agent_cash"
            android:fontFamily="sans-serif-condensed"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/tv_senddescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_header"
            android:layout_centerInParent="true"
            android:layout_marginTop="22dp"
            android:width="320dp"
            android:fontFamily="sans-serif"
            android:text="@string/become_agent_cash"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_header"
            android:layout_alignStart="@+id/tv_header"
            android:layout_below="@+id/tv_senddescription"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif"
            android:text="@string/max_amount"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/et_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_amount"
            android:ems="17"
            android:layout_alignLeft="@+id/tv_amount"
            android:layout_alignStart="@+id/tv_amount"
            android:inputType="numberDecimal"
            android:hint="@string/_0_0"
            android:autofillHints=""
            />

        <TextView
            android:id="@+id/tv_descriptionAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_amount"
            android:layout_alignStart="@+id/et_amount"
            android:layout_alignLeft="@+id/et_amount"
            android:layout_marginTop="0dp"
            android:fontFamily="sans-serif"
            android:text="@string/max_cash"
            android:width="280dp"
            android:textColor="#929295"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/tv_sender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/et_amount"
            android:layout_alignStart="@+id/et_amount"
            android:layout_below="@+id/tv_descriptionAmount"
            android:layout_marginTop="33dp"
            android:fontFamily="sans-serif"
            android:text="@string/fee"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/et_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="17"
            android:layout_below="@+id/tv_sender"
            android:layout_alignLeft="@+id/tv_sender"
            tools:ignore="TextFields"
            android:layout_alignStart="@+id/tv_sender"
            android:hint="@string/your_fee_in_percentages_e_g_5_2"
            android:autofillHints="" />
        <TextView
            android:id="@+id/tv_descriptionFee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_fee"
            android:layout_alignStart="@+id/et_amount"
            android:layout_alignLeft="@+id/et_amount"
            android:layout_marginTop="0dp"
            android:fontFamily="sans-serif"
            android:text="@string/the_fee_percentage_you_wish_to_take_for_your_service"
            android:width="280dp"
            android:textColor="#929295"
            android:textSize="14sp" />


        <Button
            android:id="@+id/btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@id/tv_descriptionFee"
            android:layout_centerInParent="true"
            android:ems="12"
            android:layout_marginTop="30dp"
            android:text="@string/become_agent"/>


    </RelativeLayout>
</ScrollView>