<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="13dp"
        android:text="@string/sign_up"
        android:fontFamily="sans-serif-condensed"
        android:textSize="30sp"/>



    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_login"
        android:layout_alignStart="@+id/tv_login"
        android:layout_below="@+id/tv_login"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif"
        android:text="@string/phone_number"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_phone"
        android:ems="17"
        android:layout_alignLeft="@+id/tv_phone"
        android:layout_alignStart="@+id/tv_phone"
        android:inputType="phone"
        android:hint="@string/your_phone_number"
        android:autofillHints=""
        />



    <TextView
        android:id="@+id/tv_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_phone"
        android:layout_alignStart="@+id/et_phone"
        android:layout_below="@+id/et_phone"
        android:layout_marginTop="33dp"
        android:fontFamily="sans-serif"
        android:text="@string/pin"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/et_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:ems="17"
        android:layout_below="@+id/tv_pin"
        android:layout_alignLeft="@+id/tv_pin"
        tools:ignore="TextFields"
        android:layout_alignStart="@+id/tv_pin"
        android:hint="@string/your_pin"
        android:autofillHints="" />


    <Button
        android:id="@+id/btn_signup"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/et_pin"
        android:layout_centerInParent="true"
        android:ems="12"
        android:layout_marginTop="30dp"
        android:text="@string/sign_up"/>


</RelativeLayout>