<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:weightSum="9.0"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/btn_send"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:background="#e38222"
        android:fontFamily="sans-serif-black"
        android:freezesText="false"
        android:isScrollContainer="false"
        android:paddingStart="14dp"
        android:paddingLeft="14dp"
        android:paddingEnd="14dp"
        android:paddingRight="33dp"
        android:radius="0dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="6"
        android:text="@string/send_money"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:backgroundTint="@null"
        app:cornerRadius="0dp"
        app:icon="@drawable/ic_handover"
        app:iconPadding="0dp"
        app:iconSize="50dp"
        app:iconTint="#F4F4F4"
        app:rippleColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_deposit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:background="#a71d16"
        android:fontFamily="sans-serif-black"
        android:freezesText="false"
        android:paddingStart="14dp"
        android:paddingLeft="14dp"
        android:paddingEnd="14dp"
        android:paddingRight="33dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="6"
        android:text="@string/deposit"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_deposit"
        app:iconPadding="0dp"
        app:iconSize="50dp" />

    <Button
        android:id="@+id/btn_withdraw"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:background="#531536"
        android:fontFamily="sans-serif-black"
        android:freezesText="false"
        android:paddingStart="14dp"
        android:paddingLeft="14dp"
        android:paddingEnd="14dp"
        android:paddingRight="33dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="6"
        android:text="@string/withdraw"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_withdraw"
        app:iconPadding="0dp"
        app:iconSize="50dp" />

    <Button
        android:id="@+id/btn_request"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:background="#123677"
        android:fontFamily="sans-serif-black"
        android:freezesText="false"
        android:paddingStart="14dp"
        android:paddingLeft="14dp"
        android:paddingEnd="14dp"
        android:paddingRight="33dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="6"
        android:text="@string/request"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_request"
        app:iconPadding="0dp"
        app:iconSize="50dp" />

    <Button
        android:id="@+id/btn_agent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:background="@color/menu_blue2"
        android:fontFamily="sans-serif-black"
        android:freezesText="false"
        android:paddingStart="14dp"
        android:paddingLeft="14dp"
        android:paddingEnd="14dp"
        android:paddingRight="33dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="6"
        android:text="@string/agent"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_agent"
        app:iconPadding="0dp"
        app:iconSize="50dp" />

    <Button
        android:id="@+id/btn_history"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:background="#03b2a4"
        android:fontFamily="sans-serif-black"
        android:freezesText="false"
        android:paddingLeft="14dp"
        android:paddingRight="33dp"
        android:paddingStart="14dp"
        android:paddingEnd="33dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="6"
        android:text="@string/transactions"
        android:textIsSelectable="false"
        android:textSize="24sp"
        android:layout_weight="1"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_history"
        app:iconPadding="0dp"
        app:iconSize="60dp" />

    <Button
        android:id="@+id/btn_balance"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:background="#03fc65"
        android:fontFamily="sans-serif-black"
        android:freezesText="false"
        android:paddingStart="14dp"
        android:paddingLeft="14dp"
        android:paddingEnd="33dp"
        android:paddingRight="33dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="6"
        android:text="@string/balance"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_balance"
        app:iconPadding="0dp"
        app:iconSize="50dp"
        app:iconTint="#3C3C3C" />

    <Button
        android:id="@+id/btn_help"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:background="#fdfd32"
        android:fontFamily="sans-serif-black"
        android:freezesText="false"
        android:paddingLeft="14dp"
        android:paddingRight="33dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="6"
        android:text="@string/help"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_help"
        app:iconPadding="0dp"
        app:iconSize="50dp"
        app:iconTint="#676767"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btn_signout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:background="#555555"
        android:fontFamily="sans-serif-black"
        android:freezesText="false"
        android:paddingLeft="14dp"
        android:paddingRight="33dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="6"
        android:text="@string/sign_out"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_signoff"
        app:iconPadding="0dp"
        app:iconSize="50dp"
        tools:ignore="RtlHardcoded" />


</LinearLayout>